openjdk23/jdk/test/langtools/tools/javac/annotations/neg/NoDefault.java
/*
 * StarshipOS Copyright (c) 2025. R.A. James
 */
@interface NoDefault {
    default int m() {return 0;}
}
